changelog

### 1.3.1 Retooled Reticule

+ Some logging fixes.

+ Ignore more activities that we don't care about.

+ Fix filter matching.

+ More documentation examples.

+ Retain advanced metadata in preview.

+ Alphabetical jump links for tags and honkers.

+ Poll rss when adding instead of waiting a full cycle.

### 1.3.0 Big Bonsai

+ Some performance tuning.

+ Follow .rss feeds for hashtags.

+ Easier to inline attached images.

+ Optional .json urls for activities.

+ cc, link, name, and tags fields for advanced metadata.

+ <big> tag supported in html.

### 1.2.3 Regarded Reflection

+ Don't serve attachments to clients expecting activities.

### 1.2.2 Nameless Neophyte

+ Ensure fetched activities are compatible content types.

+ Some federation interop improvements.

+ More complete API support.

+ More compact image arrangement.

### 1.2.1 Solipsist Satisfaction

+ Federation reliability and compat improvements.

+ Fix 32 bit support.

+ Close databases to give the wal file a chance to checkpoint.

+ Dim images in darkmode.

- Remove the hoot: feature. The bird is dead.

### 1.2.0 Forgotten Followup

+ Filter option to match unknown actors.

+ Update some dependencies.

+ Watch local.css for changes.

+ MacOS support. lol.

+ Wait for requests to drain on shutdown.

+ Handle quoteUrl property.

+ Reroute memes to donks in emergencies.

+ Fix handling of svg with bom fucks.

+ FastCGI listening.

+ Finally fix slow public queries.

### 1.1.1 Required Refinement

+ Fix help file stylesheet link.

### 1.1.0 Eventual Enshittification

+ Fix backup command.

+ Fixes for markdown.

+ Allow bigger image uploads.

+ Some hotkeys for the web UI.

+ Upload multiple files (but beware).

+ Better page titles.

+ Refine thread sort.

+ Send updates to correct audience.

+ Run analyze to improve database performance.

+ Delivery performance improvements.

+ Export command to ActivityPub data. (And import.)

+ Note that we require go 1.18 now.

### 1.0.0 Happy Honker
