@@ -1,5 +1,9 @@
 changelog
 
+### next
+
++ Try harder to retrieve threads from the database.
+
 ### 1.3.1 Retooled Reticule
 
 + Some logging fixes.
